# homelab

./: .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  Justfile  PLAN.md  PROGRESS.md  START.md  flake.nix  flakeHelpers.nix  justfile  mkdocs.yml  opencode.json
.agent/mcp/: .gitignore  README.md  USAGE.md  justfile  pyproject.toml  run-mcp.sh  setup-venv.sh
.agent/mcp/homelab_mcp/: __init__.py  repo.py  server.py
.agent/mcp/tests/: test_tools.py
.agent/skills/: nix-verify.md  oci-digest.md  security-fix.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md  HA-COMPANION-SERVICES.md  IDP-STRATEGY.md  NETBIRD-SELFHOSTED.md  NIX-PATTERNS.md  SECOND-MACHINE.md  SERVICE-CONFIGS.md  STAGES.md  STRUCTURE.md  VPS-LOKI-SHIPPING.md  index.md
docs/architecture/: auth.md  overview.md  ports-and-dns.md
docs/archive/: ha-companion-services-research.md  idp-strategy-exploration.md  netbird-selfhosted-research.md  vps-loki-shipping-research.md
docs/operations/: backup-and-restore.md  deploy.md  monitoring.md  secrets.md
docs/patterns/: 01-flake-with-deploy-disko-sops.md  02-dry-machine-definitions.md  03-zfs-ephemeral-root.md  04-ext4-simple.md  05-custom-module-options.md  06-sops-secrets.md  07-caddy-cloudflare.md  08-systemd-sops-service.md  09-justfile-commands.md  10-wyoming-procsubset.md  11-hacs-install.md  12-multi-machine-flake.md  13-nixos-anywhere-vps.md  14-netbird-client.md  15-systemd-resolved-netbird.md  21-kanidm-oauth2.md  (+8 more)
homelab/: default.nix
scripts/: verify-doc-refs.sh
secrets/: secrets.yaml  vps.yaml
(+95 files in other folders)
