[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-mcp"
version = "0.1.0"
description = "MCP server for homelab NixOS repository tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=homelab_mcp --cov-report=term-missing {args}"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
